--- a/MyApplication_V1/app/src/main/res/layout/activity_battle.xml
+++ b/MyApplication_V1/app/src/main/res/layout/activity_battle.xml
@@ -81,7 +81,7 @@
 
 
     <mangoabliu.finalproject.Layout.FontTextView
-        android:text="TextView"
+        android:text="Loading..."
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
