--- a/MyApplication_V1/app/src/main/res/layout/activity_battle.xml
+++ b/MyApplication_V1/app/src/main/res/layout/activity_battle.xml
@@ -8,6 +8,13 @@
     android:fitsSystemWindows="true"
     android:background="@drawable/bg_battle_noborder"
     >
+    <!--Searching border&planet-->
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/battle_border1"
+        android:id="@+id/imageView_battle_border"/>
+
     <!--另一边的卡-->
     <RelativeLayout
         android:layout_width="match_parent"
@@ -211,12 +218,18 @@
         android:layout_alignParentStart="true">
     </RelativeLayout>
 
-    <!--Searching border&planet-->
+    <!--Win Or Lose Image-->
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/battle_border1"
-        android:id="@+id/imageView_battle_border"/>
+        android:background="@drawable/battle_win"
+        android:id="@+id/imageView_win"/>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/battle_lose"
+        android:id="@+id/imageView_lose"/>
 
     <!--"Searching rotate icon"-->
     <ImageView
