--- a/MyApplication_V1/app/src/main/res/layout/dialog_userprofile.xml
+++ b/MyApplication_V1/app/src/main/res/layout/dialog_userprofile.xml
@@ -54,10 +54,14 @@
             android:horizontalSpacing="5dp"
             android:verticalSpacing="5dp"
             android:layout_gravity="center"
-
-
-
           />
+
+        <ImageView
+            android:id="@+id/expandedCard"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"/>
 
 
 
