--- a/MyApplication_V1/app/src/main/res/layout/activity_carddrop.xml
+++ b/MyApplication_V1/app/src/main/res/layout/activity_carddrop.xml
@@ -86,16 +86,25 @@
                </RelativeLayout>
 
 
+
+        <RelativeLayout
+            android:layout_width="@dimen/carddrop_cardlayout_width_expand"
+            android:layout_height="@dimen/carddrop_cardlayout_height_expand"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true">
+
+            <ImageView
+                android:id="@+id/expanded_image"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+
+                android:visibility="invisible"
+                />
+        </RelativeLayout>
+
     </RelativeLayout>
 
-    <ImageView
-        android:id="@+id/expanded_image"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:visibility="invisible"
-        />
+
 
 </FrameLayout>
 
