--- a/MyApplication_V1/app/src/main/res/values/dimens.xml
+++ b/MyApplication_V1/app/src/main/res/values/dimens.xml
@@ -87,6 +87,8 @@
     <dimen name="carddrop_btn_marginEnd">20dp</dimen>
     <dimen name="carddrop_cardlayout_width">130dp</dimen>
     <dimen name="carddrop_cardlayout_height">200dp</dimen>
+    <dimen name="carddrop_cardlayout_width_expand">195dp</dimen>
+    <dimen name="carddrop_cardlayout_height_expand">300dp</dimen>
 
 
     <!-- dialog_location -->
@@ -105,6 +107,8 @@
     <dimen name="location_text_padding">8dp</dimen>
     <dimen name="location_btn_drop_width">60dp</dimen>
     <dimen name="location_btn_drop_height">60dp</dimen>
+    <dimen name="location_img_expand_width">200dp</dimen>
+    <dimen name="location_img_expand_height">240dp</dimen>
 
     <!-- dialog_userfile -->
     <dimen name="userfile_icon_width">60dp</dimen>
