--- a/MyApplication_V1/app/src/main/res/layout/dialog_setting.xml
+++ b/MyApplication_V1/app/src/main/res/layout/dialog_setting.xml
@@ -4,11 +4,13 @@
     android:layout_height="@dimen/setting_height"
     android:layout_gravity="center"
     android:id="@+id/rl_setting"
-    android:background="#000">
+    android:background="#A000"
+    android:gravity="center">
 
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/rl_seekbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center">
 
@@ -17,21 +19,38 @@
             android:layout_height="@dimen/setting_imagebtn"
             android:id="@+id/btnMute"
             android:layout_marginStart="@dimen/setting_margin"
-            android:layout_gravity="center" />
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="@dimen/setting_checkbox_padding"/>
 
         <SeekBar
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_toEndOf="@+id/btnMute"
+            android:layout_alignBaseline="@id/btnMute"
             android:focusable="true"
             android:maxHeight="@dimen/setting_seekbar_progress"
             android:minHeight="@dimen/setting_seekbar_progress"
             android:paddingStart="@dimen/setting_seekbar_padding"
             android:paddingEnd="@dimen/setting_seekbar_padding"
             android:id="@+id/seekBar"
-            android:layout_gravity="center"
             android:thumb="@drawable/seekbar_thumb"
             android:progressDrawable="@drawable/progress_holo_light"/>
+        <CheckBox
+            android:id="@+id/cb_musicswitch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Music"
+            android:layout_below="@+id/btnMute"
+            android:layout_alignStart="@id/btnMute"
+            android:layout_marginRight="@dimen/setting_checkbox_padding"/>
+        <CheckBox
+            android:id="@+id/cb_soundswitch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@id/cb_musicswitch"
+            android:layout_toEndOf="@+id/cb_musicswitch"
+            android:text="Sound"/>
 
-    </LinearLayout>
+    </RelativeLayout>
 
 </RelativeLayout>
