--- a/MyApplication_V1/app/src/main/res/values/dimens.xml
+++ b/MyApplication_V1/app/src/main/res/values/dimens.xml
@@ -126,7 +126,7 @@
 
     <!--dialog_setting -->
     <dimen name="setting_width">260dp</dimen>
-    <dimen name="setting_height">100dp</dimen>
+    <dimen name="setting_height">160dp</dimen>
     <dimen name="setting_imagebtn">40dp</dimen>
     <dimen name="setting_seekbar">200dp</dimen>
     <dimen name="setting_title">24sp</dimen>
@@ -135,6 +135,7 @@
     <dimen name="setting_icon">60dp</dimen>
     <dimen name="setting_seekbar_progress">4dp</dimen>
     <dimen name="setting_seekbar_padding">30dp</dimen>
+    <dimen name="setting_checkbox_padding">20dp</dimen>
 
     <!-- layout_card -->
     <dimen name="card_layout_width">150dp</dimen>
