--- a/MyApplication_V1/app/src/main/res/layout/activity_battle.xml
+++ b/MyApplication_V1/app/src/main/res/layout/activity_battle.xml
@@ -89,7 +89,7 @@
 
 
     <mangoabliu.finalproject.Layout.FontTextView
-        android:text="Loading..."
+        android:text="TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
@@ -243,7 +243,7 @@
 
     <!--"Searching" 字样-->
     <mangoabliu.finalproject.Layout.FontTextView
-        android:text="TextView"
+        android:text="Searching..."
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
