--- a/MyApplication_V1/app/src/main/res/layout/activity_battle.xml
+++ b/MyApplication_V1/app/src/main/res/layout/activity_battle.xml
@@ -15,6 +15,30 @@
         android:background="@drawable/battle_border1"
         android:id="@+id/imageView_battle_border"/>
 
+    <!--other User Name-->
+
+    <TextView
+        android:text=""
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="69dp"
+        android:layout_marginTop="32dp"
+        android:id="@+id/textView_otherUserName" />
+
+
+    <!-- my User Name -->
+    <TextView
+        android:text=""
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="69dp"
+        android:layout_marginBottom="32dp"
+        android:id="@+id/textView_myUserName" />
+
     <!--另一边的卡-->
     <RelativeLayout
         android:layout_width="match_parent"
@@ -271,6 +295,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:background="@drawable/btn_back"/>
+
 
 
 </RelativeLayout>
