--- a/MyApplication_V1/app/src/main/res/layout/activity_carddrop.xml
+++ b/MyApplication_V1/app/src/main/res/layout/activity_carddrop.xml
@@ -15,10 +15,10 @@
              android:layout_height="@dimen/carddrop_btn_height"
              android:layout_centerHorizontal="true"
              android:background="@drawable/btn_back"
-             android:layout_alignParentBottom="true"
+             android:layout_alignParentTop="true"
              android:layout_alignParentEnd="true"
              android:layout_marginEnd="@dimen/carddrop_btn_marginEnd"
-             android:layout_marginBottom="@dimen/carddrop_btn_marginBottom" />
+             android:layout_marginTop="@dimen/carddrop_btn_marginBottom" />
 
         <RelativeLayout
             android:id="@+id/CardRootM"
