--- a/MyApplication_V1/app/src/main/res/layout/layout_card.xml
+++ b/MyApplication_V1/app/src/main/res/layout/layout_card.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="@dimen/card_layout_width"
     android:layout_height="@dimen/card_layout_height"
-    android:background="@drawable/card_back"
+    android:background="@drawable/card_r_beast"
     android:id="@+id/card_layout">
     <TextView
         android:id="@+id/card_hp"
