--- a/MyApplication_V1/app/src/main/res/layout/dialog_userprofile.xml
+++ b/MyApplication_V1/app/src/main/res/layout/dialog_userprofile.xml
@@ -9,10 +9,9 @@
         android:id="@+id/usernameProfile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toEndOf="@+id/userIcon"
-        android:layout_alignTop="@+id/userIcon"
-        android:paddingTop="@dimen/userfile_username_padding"
-        android:paddingStart="@dimen/userfile_username_padding"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:padding="@dimen/userfile_username_padding"
         android:text="@string/UserName"
         android:textSize="@dimen/userfile_username_textsize"
         android:textColor="@color/userProfileDialog_UserNameColor"
@@ -69,6 +68,7 @@
         android:layout_height="@dimen/userfile_icon_height"
         android:src="@drawable/usericon"
         android:layout_alignBottom="@+id/userProfileDialogCancel"
+        android:visibility="invisible"
         android:layout_alignStart="@+id/gridview" />
 
 
