--- a/MyApplication_V1/app/src/main/res/layout/dialog_userprofile.xml
+++ b/MyApplication_V1/app/src/main/res/layout/dialog_userprofile.xml
@@ -11,7 +11,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:padding="@dimen/userfile_username_padding"
+        android:paddingStart="@dimen/userfile_username_paddingStart"
+        android:paddingTop="@dimen/userfile_username_paddingTop"
         android:text="@string/UserName"
         android:textSize="@dimen/userfile_username_textsize"
         android:textColor="@color/userProfileDialog_UserNameColor"
